--- a/apps/api-gateway/Dockerfile.production
+++ b/apps/api-gateway/Dockerfile.production
@@ -63,4 +63,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 # Start the minimal API Gateway service
 CMD ["node", "dist/minimal-index.js"]
 
-# Force redeploy - build succeeded but service not responding
+# Force redeploy - build succeeded but service not responding# Force redeploy - Sun Sep  7 01:11:46 CEST 2025
