fix: use correct vercel.json configuration for monorepo without rootDirectory

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
-  "version": 2,
-  "framework": "nextjs",
-  "rootDirectory": "apps/business-dashboard",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install --force",
-  "build": {
-    "env": {
-      "NODE_VERSION": "18.x"
-    }
-  },
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet ."
+  "installCommand": "cd apps/business-dashboard && npm install",
+  "buildCommand": "cd apps/business-dashboard && npm run build",
+  "outputDirectory": "apps/business-dashboard/.next",
+  "framework": "nextjs"
 }
