--- a/apps/business-dashboard/vercel.json
+++ b/apps/business-dashboard/vercel.json
@@ -1,4 +1,6 @@
 {
   "framework": "nextjs",
-  "installCommand": "npm install --force"
+  "installCommand": "npm install --force",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
