chore: save current development state
- Update local Claude settings with new permissions
- Modify service worker and client layout configurations
- Update context manager component
- Remove duplicate vercel.json from customer-pwa
- Update main vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "buildCommand": "cd apps/customer-pwa && npm install && npm run build",
-  "devCommand": "cd apps/customer-pwa && npm run dev",
-  "installCommand": "npm install",
-  "outputDirectory": "apps/customer-pwa/.next",
   "framework": "nextjs",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD apps/customer-pwa/"
+  "buildCommand": "cd apps/customer-pwa && npm run build",
+  "outputDirectory": "apps/customer-pwa/.next",
+  "installCommand": "cd apps/customer-pwa && npm install"
 }
